# stock-insider

./: .gitignore  dart_client.py  main.py  pyproject.toml  spec.md  stock_data.py
tests/: test_dart_client.py
